<feature> Added a button to the home page that links to google

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <html>
-    <h1>Test H1</h1>
+    <h1>Welcome Sean</h1>
+    <h2>Please click one of the buttons below to explore some templates</h2>
+    <button onclick="window.location.href='https://google.com';">Test Button</button>
 </html>
