<feature> Updated buttons and links

--- a/torc.html
+++ b/torc.html
@@ -8,7 +8,7 @@
         <p>
             Please click through each one of the links on this list and get a feel for what your website could look like.
             If there is something that you like on one of the websites but don't like on another, we can always grab certain things.
-            Keep in mind you will be seeing a lot of "Lorem Ipsum" text, but don't worry, that is simply placeholder information.
+            Keep in mind you will be seeing a lot of different fake products, but please try to look beyond it when you gather information.
         </p>
         <h3></h3>
 
@@ -16,9 +16,10 @@
         <script src="scripts.js"></script>
     </head>
     <body>
-        <button type="button" onclick="window.location.href='torc.html';">Template 1</button><br /><br />
-        <button type="button" onclick="window.location.href='torc.html';">Template 2</button><br /><br />
-        <button type="button" onclick="window.location.href='torc.html';">Template 3</button><br /><br />
-        <button type="button" onclick="window.location.href='torc.html';">Template 4</button>
+        <button type="button" onclick="window.location.href='https://ventura-fluid-demo.squarespace.com/';">Template 1: Ventura</button><br /><br />
+        <button type="button" onclick="window.location.href='https://mariana-fluid-demo.squarespace.com/';">Template 2: Mariana</button><br /><br />
+        <button type="button" onclick="window.location.href='https://hales-fluid-demo.squarespace.com/';">Template 3: Hales</button><br /><br />
+        <button type="button" onclick="window.location.href='https://canvastemplate.com/demo-car.html';">Template 4: Canvas Car</button><br /><br />
+        <button type="button" onclick="window.location.href='https://canvastemplate.com/index-classic.html';">Template 5: Canvas Classic</button>
     </body>
 </html>
