<feature> Updates to home page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
         <meta charset="UTF-8">
         <h1 id="Welcome" style="display:inline;"></h1> 
         <h2 id="cursor" style="display:inline;">_</h2> 
-        <h3>Please click the respective project below</h3>
+        
         
         <link rel="stylesheet" href="old-terminal.css">
         <script src="scripts.js"></script>
     </head>
     <body>
-        <button type="button" onclick="window.location.href='torc.html';">Torc</button>     
+        <h3>Please click the respective project below</h3>
+        <button type="button" onclick="window.location.href='torc.html';">Torc</button><br /><br />
+
+        <h3>My information</h3>
+        <button type="button" onclick="window.location.href='https://www.linkedin.com/in/wesleyireland109/';">LinkedIn</button><br /><br />
+        <button type="button" onclick="window.location.href='https://github.com/WesleyIreland109';">GitHub</button><br /><br />
+        <button type="button" onclick="window.location.href='https://www.behance.net/wesleyireland';">Photography</button><br /><br />
     </body>
 </html>
