<feature> File restructuring and updates to titles and favicons

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
+        <title>Wesley Ireland</title>
+        <link rel="icon" type="image/x-icon" href="images/retro computer favicon.ico">
         <h1 id="Welcome" style="display:inline;"></h1> 
         <h2 id="cursor" style="display:inline;">_</h2> 
         
-        
-        <link rel="stylesheet" href="old-terminal.css">
-        <script src="scripts.js"></script>
+        <link rel="stylesheet" href="css/old-terminal.css">
+        <script src="scripts/scripts.js"></script>
     </head>
     <body>
         <h3>Please click the respective project below</h3>
