--- a/torc.html
+++ b/torc.html
@@ -2,20 +2,23 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
+        <title>Torc</title>
+        <link rel="icon" type="image/x-icon" href="images/retro computer favicon.ico">
         <h1 id="TorcTitle" style="display:inline;"></h1>
         <h2 id="cursor" style="display:inline;">_</h2>
+        <link rel="stylesheet" href="css/old-terminal.css">
+        <script src="scripts/scripts.js"></script>
+        
+        <link rel="stylesheet" href="css/old-terminal.css">
+        <script src="scripts/scripts.js"></script>
+    </head>
+    <body>
         <h3>Hello Sean, below are possible templates for your parts sales website</h3>
         <p>
             Please click through each one of the links on this list and get a feel for what your website could look like.
             If there is something that you like on one of the websites but don't like on another, we can always grab certain things.
             Keep in mind you will be seeing a lot of different fake products, but please try to look beyond it when you gather information.
         </p>
-        <h3></h3>
-
-        <link rel="stylesheet" href="old-terminal.css">
-        <script src="scripts.js"></script>
-    </head>
-    <body>
         <button type="button" onclick="window.location.href='https://ventura-fluid-demo.squarespace.com/';">Template 1: Ventura</button><br /><br />
         <button type="button" onclick="window.location.href='https://mariana-fluid-demo.squarespace.com/';">Template 2: Mariana</button><br /><br />
         <button type="button" onclick="window.location.href='https://hales-fluid-demo.squarespace.com/';">Template 3: Hales</button><br /><br />
