--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     </head>
     <body>
         <h3>Please click the respective project below</h3>
-        <button type="button" onclick="window.location.href='torc.html';">Torc</button><br /><br />
+        <p>All projects have been temporarily suspended, please refer to the GitHub below to view the current available projects</p>
+        <!-- <button type="button" onclick="window.location.href='torc.html';">Torc</button><br /><br /> -->
 
         <h3>My information</h3>
         <button type="button" onclick="window.location.href='https://www.linkedin.com/in/wesleyireland109/';">LinkedIn</button><br /><br />
