<feature> Updated Password

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <h3>Please click the respective link below</h3>
         <!-- <p>All projects have been temporarily suspended, please refer to the GitHub below to view the current available projects</p> -->
-        <button type="button" onclick="window.location.href='ppt.html';">Powerpoint Night</button>
+        <button type="button" onclick="window.location.href='password.html';">Powerpoint Night</button>
         <!-- <button type="button" onclick="window.location.href='torc.html';">Torc</button><br /><br /> -->
 
         <h3>My information</h3>
