<feature> Fixed styling for mobile

--- a/password.html
+++ b/password.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
@@ -13,5 +13,25 @@
     <body>
         <p>Enter the password to proceed:</p>
         <input type="password" id="password" placeholder="Password" onkeypress="checkPassword(event)">
+        
     </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Password</title>
+  <link rel="icon" type="image/x-icon" href="images/retro computer favicon.ico">
+  <link rel="stylesheet" href="css/old-terminal.css">
+  <script src="scripts/scripts.js"></script>
+
+</head>
+<body>
+  <div class="container">
+    <div class="title">Enter Password and Press "Enter"</div>
+    <input type="password" class="password-input" id="password" placeholder="Password" onkeypress="checkPassword(event)">
+  </div>
+</body>
 </html>
