<feature> Rhetoric update

--- a/ppt.html
+++ b/ppt.html
@@ -37,13 +37,19 @@
         <br>
         <h3><u>Rules</u></h3>
         <ul>
-            <li>Please make a PowerPoint presentation either for yourself or for someone else</li>
+            <li>
+                Please make a PowerPoint presentation either for yourself or for someone else. The PowerPoint can be about 
+                absolutely any topic you want, and can be as offensive or passive as you want it to be.
+            </li>
             <li>If someone makes a PowerPoint for you, you are forced to present it</li>
             <li>This year, if possible, try to make two PowerPoints, one for yourself and one for someone else (OPTIONAL)</li>
         </ul>
         <br>
         <h3><u>Example Topics</u></h3>
-        <p>Feel free to make a PowerPoint on any of these topics if you would like</p>
+        <p>
+            Feel free to make a PowerPoint on any of these topics if you would like, or make it over any other topic, these are just
+            some examples
+        </p>
         <ul>
             <li>Things I have shoved up my ass</li>
             <li>Why 2 inches is too big</li>
