<feature> Updated details for event

--- a/ppt.html
+++ b/ppt.html
@@ -14,9 +14,9 @@
     </head>
     <body>
         <h3><u>Welcome to Powerpoint night</u></h3>
-        <p>Date: September 8th, 2023</p>
+        <p>Date: September 23rd, 2023</p>
         <p>Address: 3841 Rolling Hills Dr. Plano, TX, 75025</p>
-        <p>Time: TBD</p>
+        <p>Time: 9:00 PM</p>
         <br>
         <h3><u>Catering</u></h3>
         <p>Food and alcohol will be served, if you have any dietary restrictions please text me at (832)-294-8434</p>
