--- a/index.html
+++ b/index.html
@@ -11,12 +11,55 @@
         <script src="scripts/scripts.js"></script>
     </head>
     <body>
-        <h3>Please click the respective link below</h3>
-        <button type="button" onclick="window.location.href='password.html';">Powerpoint Night</button>
+        <iframe class="custom-iframe" src="embed-pfp.html" scrolling="no"></iframe>
+        <h2>About Me</h2>
+        
+        <p>
+            Hello, my name is Wesley Ireland. I am currently a Software Engineer with three years of professional experience. I have extensive experience with backend
+            applications, specifically those in Java/SpringBoot. I love learning new langauages, both programming and human-kind, and enjoy working on various side-projects
+            in my field.
+        </p>
+
+        <div>
+            <!-- <object data="images/asciiPFP.txt" width="100%" height="400"></object> -->
+            <!-- <iframe src="images/asciiPFP.txt" width="100%" height="400"></iframe> -->
+            <!-- <iframe class="custom-iframe" src="embed-pfp.html" scrolling="no"></iframe> -->
+        </div>
+
+        <button type="button" onclick="window.location.href='password.html';">Resume</button><br /><br />
+
+        <h3>Skills and Technologies</h3>
+        <p>
+            I have extensive experience in various technologies and lots of skills.
+        </p>
+
+        <h3>Awards and Achievements</h3>
+        <p>
+            I have lots of awards and Achievements.
+        </p> <br />
+
+        <h3>Side Projects</h3>
+        <button type="button" class="accordion-button" onclick="toggleAccordionVideoGames()">Video Games!</button><br /><br />
+        <div class="accordion-content1">
+            <button class="nested-button">Dante's Inferno</button>
+            <button class="nested-button">Secret Project - WIP</button><br /><br />
+        </div>
+        <button type="button" class="accordion-button" onclick="toggleAccordionMicroControllers()">Micro Controllers</button><br /><br />
+        <div class="accordion-content2">
+            <button class="nested-button">Raspi Cluster</button>
+            <button class="nested-button">WS2812b</button><br /><br />
+        </div>
+        <button type="button" class="accordion-button" onclick="toggleAccordionWebsites()">Websites</button><br /><br />
+        <div class="accordion-content3">
+            <button class="nested-button">Sandra Howatt</button>
+            <button class="nested-button">KellStarr</button><br /><br />
+            <p>And this website :)</p>
+        </div>
 
         <h3>My information</h3>
+        <button type="button" onclick="window.location.href='https://www.linkedin.com/in/wesleyireland109/';">Contact Info</button><br /><br />
         <button type="button" onclick="window.location.href='https://www.linkedin.com/in/wesleyireland109/';">LinkedIn</button><br /><br />
-        <button type="button" onclick="window.location.href='https://github.com/WesleyIreland109';">GitHub</button><br /><br />
+        <button type="button" onclick>GitHub - WIP :)</button><br /><br />
         <button type="button" onclick="window.location.href='https://www.behance.net/wesleyireland';">Photography</button><br /><br />
     </body>
 </html>
