--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- <iframe class="custom-iframe" src="embed-pfp.html" scrolling="no"></iframe> -->
         </div>
 
-        <button type="button" onclick="window.location.href='password.html';">Resume</button><br /><br />
+        <button type="button" onclick="window.open('files/WesleyIrelandResume2023.pdf', '_blank')">Resume</button><br /><br />
 
         <h3>Skills and Technologies</h3>
         <p>
